--- a/index.html
+++ b/index.html
@@ -14,22 +14,23 @@
 
         <div id="input_div" class="section">
             <h1>Metric/Imperial Unit Conversion</h1>
-            <input type="text" class="radius">
-            <button class="radius">Convert</button>
+            <!-- Used type text instead of number to mimic figma design -->
+            <input type="text" id="input_el" class="radius">
+            <button id="convert_btn" class="radius">Convert</button>
         </div>
         
         <div id="output_div" class="section">
             <div class="output_card radius">
                 <h2 class="card_heading">Length (Meter/Feet)</h2>
-                <p id="length_el">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+                <p id="length_el">Input value to convert</p>
             </div>
             <div class="output_card radius">
                 <h2 class="card_heading">Volume (Liters/Gallons)</h2>
-                <p id="volume_el">20 liters = 5.284 gallons | 20 gallons = 75.708 liters</p>
+                <p id="volume_el">Input value to convert</p>
             </div>
             <div class="output_card radius">
                 <h2 class="card_heading">Mass (Kilograms/Pounds)</h2>
-                <p id="mass_el">20 kilos = 44.092 pounds | 20 pounds = 9.072 kilos</p>
+                <p id="mass_el">Input value to convert</p>
             </div>
         </div>
 
